--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-# 檔案名稱 .gitignore
+﻿# 檔案名稱 .gitignore
 
 # 忽略pyinstaller 產生的額外東東 
 /__pycache__/
 /build/
 /dist/
 app.spec
+pyqtwindow.spec
 
 *.kml
 *.xlsx
